# vipulsabout-rs

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  REFERENCES.md  nextest.toml
src/: lib.rs  main.rs
src/app/: mod.rs
src/components/: mod.rs
src/components/blog/: mod.rs
src/components/blog/not_found/: mod.rs
src/components/blog/rust/: mod.rs
src/components/blog/tech/: mod.rs
src/components/home/: mod.rs
src/components/not_found/: mod.rs
src/router/: mod.rs
vipulsabout-backend/: Cargo.toml
vipulsabout-backend/src/: lib.rs  main.rs
vipulsabout-frontend/: Cargo.toml  Trunk.toml  index.html
vipulsabout-frontend/src/: error.rs  lib.rs  main.rs
vipulsabout-frontend/src/app/: mod.rs
vipulsabout-frontend/src/app/blog/: mod.rs
vipulsabout-frontend/src/app/blog/tech/: mod.rs
vipulsabout-frontend/src/components/: mod.rs  navbar.rs
vipulsabout-frontend/src/router/: mod.rs
vipulsabout-frontend/src/types/: mod.rs
vipulsabout-frontend/tests/: async.rs  example.rs
